ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error8.asc
x = 7;

function x(y,x){	////Error: Variable 'x' already defined at line: 1
   return(y);
}
